force-app/main/default/objects/Transporteur_Associe__c/Transporteur_Associe__c.object-meta.xml
<CustomObject>
    <description>Ensemble des chargeurs associés à l&#39;instant avec un relais.Pour la France il est possible d’activer ou désactiver un ou des transporteurs par l’action d’activation ou de désactivation.</description>
    <label>Transporteur associé</label>
    <nameField>
        <displayFormat>TRA-{0000}</displayFormat>
        <label>Numéro du Transporteur associé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transporteurs associés</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>