force-app/main/default/objects/Transporteur_Associe__c/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <description>Texte pour renseigner le motif de modification si &quot;Autre&quot;.</description>
    <label>Commentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>