force-app/main/default/objects/Transporteur_Associe__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transporteurs associés</relationshipLabel>
    <relationshipName>Transporteurs_associes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>