force-app/main/default/objects/Transporteur_Associe__c/fields/Desactive__c.field-meta.xml
<CustomField>
    <fullName>Desactive__c</fullName>
    <formula>IF( Active__c =true,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Désactivé</label>
    <type>Checkbox</type>
</CustomField>