force-app/main/default/objects/Transporteur_Associe__c/fields/Interdit__c.field-meta.xml
<CustomField>
    <fullName>Interdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interdit</label>
    <type>Checkbox</type>
</CustomField>