force-app/main/default/objects/Transporteur_Associe__c/fields/tech_bypassNonModifiableCheck__c.field-meta.xml
<CustomField>
    <fullName>tech_bypassNonModifiableCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_bypassNonModifiableCheck</label>
    <type>Checkbox</type>
</CustomField>