force-app/main/default/objects/Transporteur_Associe__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Points relais associés</relationshipLabel>
    <relationshipName>Transporteurs_associes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>