force-app/main/default/objects/Transporteur_Associe__c/validationRules/TRAA_VR02_Modif_Tr_temp_Fin_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>TRAA_VR02_Modif_Tr_temp_Fin_Obligatoire</fullName>
    <active>true</active>
    <description>Si &quot;Etat de statut&quot; est temporaire alors vous devez obligatoirement renseigner la date de fin. La date de fin ne doit pas être dans le passé.</description>
    <errorConditionFormula>AND(
Not($User.BypassValidationRule__c),
ISPICKVAL (Etat_du_statut__c,&quot;temporaire&quot; ),
OR( 
   ISBLANK( Date_de_fin_du_statut__c ), 
   Date_de_fin_du_statut__c &lt; TODAY() 
) 
)</errorConditionFormula>
    <errorDisplayField>Date_de_fin_du_statut__c</errorDisplayField>
    <errorMessage>Si &quot;Etat de statut&quot; est temporaire alors vous devez obligatoirement renseigner la date de fin. La date de fin ne doit pas être dans le passé.</errorMessage>
</ValidationRule>