force-app/main/default/objects/Transporteur_Associe__c/validationRules/TranspAssocie_VR01_chooseOneValue.validationRule-meta.xml
<ValidationRule>
    <fullName>TranspAssocie_VR01_chooseOneValue</fullName>
    <active>true</active>
    <errorConditionFormula>If(Active__c = true,1,0)+
If(Exclu__c  = true,1,0)+
If(Interdit__c = true, 1,0)
&gt; 1</errorConditionFormula>
    <errorMessage>Veuillez choisir une des cases à cochés suivantes (Activé, Exclu ou Interdit)</errorMessage>
</ValidationRule>