force-app/main/default/objects/Transporteur_Associe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transporteur__c</columns>
    <columns>Compte__c</columns>
    <columns>Reference_Pudo__c</columns>
    <columns>Macroprofil__c</columns>
    <columns>Active__c</columns>
    <columns>Modifiable__c</columns>
    <columns>Motif_d_activation_desactivation__c</columns>
    <columns>Etat_du_statut__c</columns>
    <columns>Date_de_fin_du_statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les transporteurs associés</label>
    <language>fr</language>
</ListView>